<resources>
    <string name="app_name">Swoosh</string>
    <string name="image_initiale">Image_initiale</string>
    <string name="logo_swoosh">Logo Swoosh</string>
    <string name="background_image">background image</string>
    <string name="desired_league">Desired League:</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="n_e_x_t">N E X T</string>
    <string name="mens_toggle">Mens</string>
    <string name="womens_toggle">Womens</string>
    <string name="womens_other">Womens</string>
    <string name="co_ed_toggle">Co-Ed</string>
    <string name="co_ed_other">Co-Ed</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_you_city_and_dominate_the_league">Find a team in you city and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="TexteGoAllin">Premiere ligne titre</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="baler">BALLER</string>
    <string name="balller">BALLER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="search_league">Looking for a co-ed beginner league near you</string>
    <string name="beginner_toggle">beginner_toggle</string>
    <string name="baller_toggle">baller_toggle</string>

</resources>